[package]
name = "repos"
version = "0.1.0"
authors = ["Alex Sarapulov <1molyee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git="https://github.com/clap-rs/clap" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
thiserror = "1.0"
log = "0.4"
env_logger = "0.8"
colored = "2.0"
